@@ -1,26 +1,22 @@
 package com.vinaacademy.platform.feature.lesson.service;
 
-import com.vinaacademy.platform.exception.BadRequestException;
 import com.vinaacademy.platform.exception.NotFoundException;
 import com.vinaacademy.platform.exception.ValidationException;
 import com.vinaacademy.platform.feature.lesson.dto.LessonDto;
 import com.vinaacademy.platform.feature.lesson.dto.LessonRequest;
 import com.vinaacademy.platform.feature.lesson.entity.Lesson;
+import com.vinaacademy.platform.feature.lesson.factory.LessonCreator;
+import com.vinaacademy.platform.feature.lesson.factory.LessonCreatorFactory;
 import com.vinaacademy.platform.feature.lesson.mapper.LessonMapper;
 import com.vinaacademy.platform.feature.lesson.repository.LessonRepository;
-import com.vinaacademy.platform.feature.lesson.repository.projection.LessonAccessInfoDto;
 import com.vinaacademy.platform.feature.log.service.LogService;
-import com.vinaacademy.platform.feature.quiz.entity.Quiz;
-import com.vinaacademy.platform.feature.quiz.repository.QuizRepository;
-import com.vinaacademy.platform.feature.reading.Reading;
-import com.vinaacademy.platform.feature.reading.repository.ReadingRepository;
 import com.vinaacademy.platform.feature.section.entity.Section;
 import com.vinaacademy.platform.feature.section.repository.SectionRepository;
-import com.vinaacademy.platform.feature.user.auth.utils.SecurityUtils;
-import com.vinaacademy.platform.feature.user.constant.AuthConstants;
+import com.vinaacademy.platform.feature.user.auth.annotation.RequiresResourcePermission;
+import com.vinaacademy.platform.feature.user.auth.service.AuthorizationService;
+import com.vinaacademy.platform.feature.user.auth.helpers.SecurityHelper;
+import com.vinaacademy.platform.feature.user.constant.ResourceConstants;
 import com.vinaacademy.platform.feature.user.entity.User;
-import com.vinaacademy.platform.feature.video.entity.Video;
-import com.vinaacademy.platform.feature.video.repository.VideoRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -37,12 +33,11 @@ public class LessonServiceImpl implements LessonService {
 
     private final LessonRepository lessonRepository;
     private final SectionRepository sectionRepository;
-    private final VideoRepository videoRepository;
-    private final ReadingRepository readingRepository;
-    private final QuizRepository quizRepository;
-    private final SecurityUtils securityUtils;
+    private final SecurityHelper securityHelper;
+    private final AuthorizationService authorizationService;
     private final LogService logService;
     private final LessonMapper lessonMapper;
+    private final LessonCreatorFactory lessonCreatorFactory;
 
     @Override
     @Transactional(readOnly = true)
@@ -64,23 +59,36 @@ public class LessonServiceImpl implements LessonService {
 
     @Override
     @Transactional
+    @RequiresResourcePermission(
+            resourceType = ResourceConstants.SECTION,
+            permission = ResourceConstants.VIEW_OWN,
+            idParam = "request.sectionId"
+    )
     public LessonDto createLesson(LessonRequest request) {
         log.info("Creating new lesson with title: {}, type: {}", request.getTitle(), request.getType());
-        User currentUser = securityUtils.getCurrentUser();
+        User currentUser = securityHelper.getCurrentUser();
         return createLesson(request, currentUser);
     }
 
     @Override
     @Transactional
+    @RequiresResourcePermission(
+            resourceType = ResourceConstants.SECTION,
+            permission = ResourceConstants.VIEW_OWN,
+            idParam = "request.sectionId"
+    )
     public LessonDto createLesson(LessonRequest request, User author) {
         log.info("Creating new lesson with title: {}, type: {} by explicit author: {}",
                 request.getTitle(), request.getType(), author.getUsername());
         Section section = findSectionById(request.getSectionId());
 
-        validateLessonRequest(request);
         validateOrderIndex(request.getOrderIndex(), section, null);
 
-        Lesson lesson = createLessonByType(request, section, author);
+        // Get the appropriate creator for this lesson type
+        LessonCreator creator = lessonCreatorFactory.getCreator(request.getType());
+
+        // Use the factory method to create the lesson
+        Lesson lesson = creator.createLesson(request, section, author);
 
         // Log the creation
         logService.log("Lesson", "CREATE",
@@ -93,6 +101,11 @@ public class LessonServiceImpl implements LessonService {
 
     @Override
     @Transactional
+    @RequiresResourcePermission(
+            resourceType = ResourceConstants.LESSON,
+            permission = ResourceConstants.EDIT,
+            idParam = "id"
+    )
     public LessonDto updateLesson(UUID id, LessonRequest request) {
         log.info("Updating lesson with id: {}", id);
         Lesson existingLesson = findLessonById(id);
@@ -100,8 +113,8 @@ public class LessonServiceImpl implements LessonService {
 
         LessonDto oldLessonData = lessonMapper.lessonToLessonDto(existingLesson);
 
-        // Check if user has permission
-        if (!securityUtils.canModifyResource(existingLesson.getAuthor().getId())) {
+        // Check if user has permission using AuthorizationService
+        if (!authorizationService.canModifyResource(existingLesson.getAuthor().getId())) {
             throw new ValidationException("You don't have permission to update this lesson");
         }
 
@@ -110,6 +123,7 @@ public class LessonServiceImpl implements LessonService {
 
         // Basic update for common fields
         existingLesson.setTitle(request.getTitle());
+        existingLesson.setDescription(request.getDescription());
         existingLesson.setSection(section);
         existingLesson.setFree(request.isFree());
         existingLesson.setOrderIndex(request.getOrderIndex());
@@ -129,32 +143,19 @@ public class LessonServiceImpl implements LessonService {
 
         return lessonMapper.lessonToLessonDto(existingLesson);
     }
-
-    @Override
-    public boolean hasAccess(UUID lessonId) {
-        User currentUser = securityUtils.getCurrentUser();
-        return hasAccess(lessonId, currentUser) ||
-                securityUtils.hasRole(AuthConstants.ADMIN_ROLE);
-    }
-
-    @Override
-    public boolean hasAccess(UUID lessonId, User user) {
-        LessonAccessInfoDto lessonAccessInfo = lessonRepository
-                .getLessonAccessInfo(lessonId, user.getId())
-                .orElseThrow(() -> BadRequestException.message("Lesson not found"));
-        return lessonAccessInfo.isFree() ||
-                lessonAccessInfo.isInstructor() ||
-                lessonAccessInfo.isEnrolled();
-    }
-
     @Override
     @Transactional
+    @RequiresResourcePermission(
+            resourceType = ResourceConstants.LESSON,
+            permission = ResourceConstants.DELETE,
+            idParam = "id"
+    )
     public void deleteLesson(UUID id) {
         log.info("Deleting lesson with id: {}", id);
         Lesson lesson = findLessonById(id);
 
-        // Check if user has permission
-        if (!securityUtils.canModifyResource(lesson.getAuthor().getId())) {
+        // Check if user has permission using AuthorizationService
+        if (!authorizationService.canModifyResource(lesson.getAuthor().getId())) {
             throw new ValidationException("You don't have permission to delete this lesson");
         }
 
@@ -241,7 +242,7 @@ public class LessonServiceImpl implements LessonService {
         if (lessonId != null) {
             existingLessons = existingLessons.stream()
                     .filter(lesson -> !lesson.getId().equals(lessonId))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         // Check for duplicate order index
@@ -269,77 +270,16 @@ public class LessonServiceImpl implements LessonService {
         }
     }
 
-    private Lesson createLessonByType(LessonRequest request, Section section, User author) {
-        Lesson lesson = switch (request.getType()) {
-            case VIDEO -> {
-                Video video = Video.builder()
-                        .title(request.getTitle())
-                        .section(section)
-                        .free(request.isFree())
-                        .orderIndex(request.getOrderIndex())
-                        .author(author)
-                        .build();
-                yield videoRepository.save(video);
-            }
-            case READING -> {
-                Reading reading = Reading.builder()
-                        .title(request.getTitle())
-                        .section(section)
-                        .free(request.isFree())
-                        .orderIndex(request.getOrderIndex())
-                        .author(author)
-                        .content(request.getContent())
-                        .build();
-                yield readingRepository.save(reading);
-            }
-            case QUIZ -> {
-                Quiz quiz = Quiz.builder()
-                        .title(request.getTitle())
-                        .section(section)
-                        .free(request.isFree())
-                        .orderIndex(request.getOrderIndex())
-                        .author(author)
-                        .passPoint(request.getPassPoint())
-                        .totalPoint(request.getTotalPoint())
-                        .duration(request.getDuration())
-                        .build();
-                yield quizRepository.save(quiz);
-            }
-            default -> throw new ValidationException("Unsupported lesson type: " + request.getType());
-        };
-
-        // Use section's helper method to maintain bidirectional relationship
-        section.addLesson(lesson);
-
-        return lesson;
-    }
-
     private void updateLessonByType(Lesson lesson, LessonRequest request) {
-        switch (lesson.getType()) {
-            case VIDEO:
-                if (lesson instanceof Video video) {
-                    videoRepository.save(video);
-                }
-                break;
-
-            case READING:
-                if (lesson instanceof Reading reading) {
-                    reading.setContent(request.getContent());
-                    readingRepository.save(reading);
-                }
-                break;
-
-            case QUIZ:
-                if (lesson instanceof Quiz quiz) {
-                    quiz.setPassPoint(request.getPassPoint());
-                    quiz.setTotalPoint(request.getTotalPoint());
-                    quiz.setDuration(request.getDuration());
-                    quizRepository.save(quiz);
-                }
-                break;
-
-            default:
-                throw new ValidationException("Unsupported lesson type: " + lesson.getType());
+        // Validate that we're not trying to change the lesson type
+        if (lesson.getType() != request.getType()) {
+            throw new ValidationException("Cannot change lesson type. Delete and create a new lesson instead.");
         }
+
+        // Get the appropriate creator for this lesson type using our factory
+        LessonCreator creator = lessonCreatorFactory.getCreator(lesson.getType());
+
+        // Use the creator to update the lesson
+        creator.updateLesson(lesson, request);
     }
 }
